1998-06-21  Mario Weilguni   <mweilguni@kde.org>

	* small fix for quicker response in kmnewiostatus.cpp

	* "Delete folder" dialog now defaults to "No" (compliant to 
	KDE standards)

1998-06-20  Markus Wuebben  <markus@kde.org>

	* kmsender.cpp (cleanup): Fixed the sendQueued problem.
	If only one message from the outbox couldnt get sent all
	following messages got deleted from the outbox. This is fixed now.
	

1998-06-19  Stefan Taferner  <taferner@kde.org> (KMail-0.7.6)

	* Folder: fixed broken locking on systems without
	flock(). Thanks to Werner Ertle <wer@christl.hl.siemens.de>
	who sent me the patch.

1998-06-18  Stefan Taferner  <taferner@kde.org> (KMail-0.7.5)

	* Deleting folders crashed kmail. Fixed.

	* Folder-compacting: added busy pointer and progress
	output in the status bar (idea from Mario).	

	* Reader: removed ':' from the characters that mark
	quoted text to catch smileys at the beginning of the
	line ;-)

	* Main window configuration (geometry, etc.) is now
	stored again.

	* Composer: changed completion key from Ctrl-. to Ctrl-T
	as kfile has.

1998-06-18  Mario Weilguni   <mweilguni@kde.org>

	* Dialog for folder selection: Escape now closes dialog,
	remembers last folder, has a default pushbutton

1998-06-17  Stefan Taferner  <taferner@kde.org> (KMail-0.7.4)

	* Message-list: now the first unread/new message is
	displayed when opening a folder.

	* Message-status: now messages change status from
	"new" to "unread" when the user changes folder (and
	not when the folder is closed somewhere within KMail).

	* Reader: worked around problem of current HTML widget
	with long lines (without '\n')

1998-06-16  Stefan Taferner  <taferner@kde.org> (KMail-0.7.3)

	* Headers: Improved switching between folders to do
	less paints to avoid flickering where possible.

	* Warnings: changed warning messages of QPixmap and
	QPainter to debug messages to avoid lots of message
	boxes from broken KToolbar code when changing color 
	scheme.
