@@ -1,3 +1,7 @@
+1998-06-22  Markus Wuebben  <markus@kde.org> (KMail-0.7.6)
+
+	* fixed a whole bunch of stuff that made kmail segfault.
+
 1998-06-21  Mario Weilguni   <mweilguni@kde.org>
 
 	* small fix for quicker response in kmnewiostatus.cpp
